<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsurenceInformation"
    android:background="@drawable/artboard_1">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/vehicle_information"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/buttonsLayout">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/purpose_of_use"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/addPerposeOfUse"
                app:layout_constraintTop_toTopOf="parent" />


            <Spinner
                android:id="@+id/addPerposeOfUse"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="#F6F6F6"
                android:backgroundTint="#1C7016"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/cr_photo"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/vehicle_photo"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView1" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:text="If You Have"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/addPerposeOfUse"
                app:layout_constraintTop_toBottomOf="@+id/addPerposeOfUse" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/previous_insurance_card"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/btnUploadOldCard"
                app:layout_constraintTop_toTopOf="@+id/btnUploadOldCard" />

            <Button
                android:id="@+id/btnUploadCrPhoto"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#1C7016"
                android:backgroundTintMode="add"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                app:strokeColor="#1C7016"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnUploadVehiclePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#1C7016"
                android:backgroundTintMode="add"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:strokeColor="#1C7016"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnUploadOldCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#1C7016"
                android:backgroundTintMode="add"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnUploadVehiclePhoto"
                app:layout_constraintTop_toBottomOf="@+id/btnUploadVehiclePhoto"
                app:strokeColor="#1C7016"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnPreviousSetp02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#1C7016"
            android:backgroundTintMode="add"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:strokeColor="#1C7016"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#1C7016"
            android:backgroundTintMode="add"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:strokeColor="#1C7016"
            app:strokeWidth="2dp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>